# SympTalk

./: README.md
backend/: .gitignore
backend/app/: alembic.ini  pyproject.toml
backend/app/migration/: README
backend/app/src/: main.py
backend/app/src/common/: __init__.py
backend/app/src/common/ncp/: __init__.py  clova_speech_recognition.py  clova_voice.py
backend/app/src/common/openai/: __init__.py  chatgpt.py
backend/app/src/constant/: __init__.py  database.py  ncp.py  openai.py
backend/app/src/core/: config.py
backend/app/src/database/: disease.py  disease_symptom.py  symptom.py  user.py  user_answer.py  user_answer_symptom.py  user_disease.py  user_question.py
backend/app/src/model/: __init__.py  answer.py  question.py
backend/app/src/router/: __init__.py  answer.py  question.py
backend/app/src/service/: answer.py  question.py
