[tool.poetry]
name = "symptalk"
version = "0.1.0"
description = ""
authors = ["Taehyun Lee <0417taehyun@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"
sqlalchemy = "^2.0.21"
alembic = "^1.12.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
